--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
     <title>NMAMIT</title>
 </head>
 <body>
-    <div><img src="logo.png" alt="logo"></div>
-    <h1 style="color:orange; text-align: center;text-underline-offset: ;"> NITTE UNIVERSITY</h1>
-    <table style="font-style: italic; font-size:large ;color:yellow; text-align: center;">
+    <div><img src="logo.jpeg" alt="logo"></div>
+    <h1 style="color:black; text-align: center;"> NITTE UNIVERSITY</h1>
+    <table style="font-style: italic; font-size:large ;color:purple; text-align: center;">
       <th>Address:</th>
       <td>KARKALA UDUPI</td>
 
     </table>
     <div><nav>
-       <li><button class="dropbtn"><a href="https://apply.nitte.edu.in/">HOME</a></button></li>
+       <li><button class="dropbtn"><a href="https://nmamit.nitte.edu.in/">HOME</a></button></li>
     </nav></div>
 
     <div class="dropdown">
         <button class="dropbtn">DEPARTMENT</button>
         <div class="dropbtn-content">
-            <a href="https://nmamit.nitte.edu.in/department-computer-science.php">CSE</a>
-            <a href="https://nmamit.nitte.edu.in/department-information-science.php">ISE</a>
-            <a href="https://nmamit.nitte.edu.in/department-mechanical.php">ROYAL MECH</a>
+            <a href="cs.html">CSE</a>
+            <a href="is.html">ISE</a>
+            <a href="royalmech.html">ROYAL MECH</a>
 
         </div>
     </div>
-    <h1><span style="color:orangered;">ABOUT US</span></h1>
+    <h1><span style="color:black;">ABOUT US</span></h1>
     <p>NITTE, officially NITTE (Deemed to be University), is an institute of higher education located in Derlakatte, Mangalore, India. It is formed under the Trust of NITTE, a trust sponsored by Nitte Education.
         The A.B. Shetty Memorial Institute of Dental Sciences (established in 1985) was the first constituent college of Nitte University.
 
